# physical-ai-stl

./: .codespellignorewords.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  torch.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
assets/heat2d_scalar/: frame_0000.npy  frame_0001.npy  frame_0002.npy  frame_0003.npy  frame_0004.npy  frame_0005.npy  frame_0006.npy  frame_0007.npy  frame_0008.npy  frame_0009.npy  frame_0010.npy  frame_0011.npy  frame_0012.npy  frame_0013.npy  frame_0014.npy  frame_0015.npy  frame_0016.npy  frame_0017.npy  frame_0018.npy  frame_0019.npy  frame_0020.npy  frame_0021.npy  frame_0022.npy  frame_0023.npy  frame_0024.npy  frame_0025.npy  frame_0026.npy  frame_0027.npy  frame_0028.npy  frame_0029.npy  frame_0030.npy  frame_0031.npy  frame_0032.npy  frame_0033.npy  frame_0034.npy  frame_0035.npy  frame_0036.npy  frame_0037.npy  frame_0038.npy  frame_0039.npy  (+10 more)
configs/: diffusion1d_baseline.yaml  diffusion1d_baseline.yaml  yaml Copy  diffusion1d_stl.yaml  heat2d_baseline.yaml  neuromancer_sine_bound.yaml
docs/: INSTALL_EXTRAS.md  REPRODUCIBILITY.md  dataset_recommendations.md  framework_survey.md  quickstart.md  reading_list.md  roadmap.md  sprint1_report.md  sprint2_report.md
docs/report/: outline.md
scripts/: Makefile  check_env.py  eval_diffusion_rtamt.py  eval_heat2d_moonlight.py  framework_survey.py  gen_heat2d_frames.py  plot_ablations.py  run_ablations_diffusion.py  run_experiment.py  spatial_demo.py  train_burgers_torchphysics.py  train_diffusion_stl.py  train_heat2d_strel.py  train_neuromancer_stl.py  utils_plot.py
scripts/specs/: contain_hotspot.mls
src/physical_ai_stl/: __init__.py  __main__.py  pde_example.py  py.typed
src/physical_ai_stl/data/: diffusion_data.py
src/physical_ai_stl/datasets/: __init__.py  stlnet_synthetic.py
src/physical_ai_stl/experiments/: __init__.py  diffusion1d.py  heat2d.py
src/physical_ai_stl/frameworks/: neuromancer_hello.py  neuromancer_stl_demo.py  physicsnemo_hello.py  spatial_spec_hello.py  torchphysics_hello.py
src/physical_ai_stl/models/: __init__.py  mlp.py  torchphysics_pinn.py
src/physical_ai_stl/monitoring/: __init__.py  moonlight_helper.py  rtamt_monitor.py  stl_soft.py
src/physical_ai_stl/monitors/: __init__.py  moonlight_hello.py  moonlight_strel_hello.py  rtamt_hello.py  spatial_demo.py
src/physical_ai_stl/physics/: __init__.py  diffusion1d.py  heat2d.py
src/physical_ai_stl/specs/: moonlight_utils.py  rtamt_utils.py  smooth_stl.py  temporal.py
src/physical_ai_stl/specs/scripts/: contain_hotspot.mls
src/physical_ai_stl/src/physical_ai_stl/monitors/: __init__.py
src/physical_ai_stl/training/: __init__.py  grids.py
src/physical_ai_stl/utils/: __init__.py  logger.py  seed.py
src/stlai/logic/: __init__.py  smooth_robust.py  stl_rtamt.py  strel_moonlight.py
src/stlai/src/stlai/logic/logic/: smooth_robust.py
src/stlai/tests/: __init__.py
src/stlai/utils/: __init__.py  grids.py
src/torch/: __init__.py
tests/: conftest.py  test_moonlight_hello.py  test_moonlight_strel.py  test_neuromancer_demo.py  test_neuromancer_hello.py  test_pde_example.py  test_pde_robustness.py  test_physicsnemo_hello.py  test_rtamt_hello.py  test_spatial_spec_demo.py  test_spatial_spec_hello.py  test_stl_soft.py  test_stlnet_dataset.py  test_torchphysics_hello.py
